Clearly separate concerns and API between rule admin and auth requests and responses
Authorization requests used Filter, refactored to use a clean
representation of AccessRequest and AdminAccessRequest.

Authorization responses where the same for resource access requests
and workspace admin access requests. Both returned AccessInfo, which
was almost everything related to data access rules.

Made workspace admin requests return AdminAccessInfo instead of
AccessInfo.

As a side effect, the four constructs are fully immutable and safe
for caching.
