# src/domain/model/src/main/java/org/geoserver/acl/model/authorization/AccessRequest.java
@@ -5,11 +5,10 @@
 package org.geoserver.acl.model.authorization;
 
 import lombok.Builder;
+import lombok.Builder.Default;
 import lombok.NonNull;
 import lombok.Value;
 import lombok.With;
-
-import org.geoserver.acl.model.filter.RuleFilter;
 
 import java.util.Set;
 
@@ -18,14 +17,36 @@ import java.util.Set;
 @Builder(toBuilder = true, builderClassName = "Builder")
 public class AccessRequest {
 
-    private User user;
-    private @NonNull RuleFilter filter;
+    public static String DEFAULT = null;
+    public static String ANY = "*";
 
-    public Set<String> userRoles() {
-        return user == null ? Set.of() : user.getRoles();
-    }
+    @Default private String user = ANY;
 
-    public static AccessRequest of(User user, @NonNull RuleFilter filter) {
-        return AccessRequest.builder().user(user).filter(filter).build();
+    @NonNull private Set<String> roles;
+
+    @Default private String instance = ANY;
+    @Default private String service = ANY;
+    @Default private String request = ANY;
+    @Default private String subfield = ANY;
+    @Default private String workspace = ANY;
+    @Default private String layer = ANY;
+    @Default private String sourceAddress = ANY;
+
+    public static class Builder {
+        private Set<String> roles = Set.of(ANY);
+
+        public Builder roles(String... roleNames) {
+            if (null == roleNames) return roles(Set.of());
+            return roles(Set.of(roleNames));
+        }
+
+        public Builder roles(Set<String> roleNames) {
+            if (null == roleNames) {
+                this.roles = Set.of();
+                return this;
+            }
+            this.roles = Set.copyOf(roleNames);
+            return this;
+        }
     }
 }
