# src/integration/openapi/model-mapping/src/main/java/org/geoserver/acl/api/mapper/AuthorizationModelApiMapper.java
@@ -6,9 +6,10 @@ package org.geoserver.acl.api.mapper;
 
 import org.geoserver.acl.api.model.AccessInfo;
 import org.geoserver.acl.api.model.AccessRequest;
+import org.geoserver.acl.api.model.AdminAccessInfo;
+import org.geoserver.acl.api.model.AdminAccessRequest;
 import org.mapstruct.InjectionStrategy;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
 
 @Mapper(
@@ -18,15 +19,19 @@ import org.mapstruct.ReportingPolicy;
         uses = {GeometryApiMapper.class, RuleFilterApiMapper.class})
 public interface AuthorizationModelApiMapper {
 
-    @Mapping(target = "username", source = "user.name")
-    @Mapping(target = "roles", source = "user.roles")
     AccessRequest toApi(org.geoserver.acl.model.authorization.AccessRequest request);
 
-    @Mapping(target = "user.name", source = "username")
-    @Mapping(target = "user.roles", source = "roles")
     org.geoserver.acl.model.authorization.AccessRequest toModel(AccessRequest request);
 
     AccessInfo toApi(org.geoserver.acl.model.authorization.AccessInfo grant);
 
     org.geoserver.acl.model.authorization.AccessInfo toModel(AccessInfo grant);
+
+    AdminAccessRequest toApi(org.geoserver.acl.model.authorization.AdminAccessRequest request);
+
+    org.geoserver.acl.model.authorization.AdminAccessRequest toModel(AdminAccessRequest request);
+
+    AdminAccessInfo toApi(org.geoserver.acl.model.authorization.AdminAccessInfo grant);
+
+    org.geoserver.acl.model.authorization.AdminAccessInfo toModel(AdminAccessInfo grant);
 }
